# openglstudy

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  main.cpp  run.py
configuration/: root_directory.h
includes/: CMakeLists.txt  Makefile
includes/glad/: glad.c  glad.h
includes/glfw/: Makefile
includes/glfw/src/: Makefile
includes/learnopengl/: camera.h  mesh.h  model.h
src/advancedgl/blending_sorted/: blending_sorted.cpp
src/advancedgl/cubemapping/: cubemaps_skybox.cpp
src/advancedgl/cubemappingreflection/: cubemaps_skybox.cpp
src/advancedgl/cubemappingrefraction/: 6.3.cubemaps.fs  cubemaps_skybox.cpp
src/advancedgl/framebuffers/: framebuffers.cpp
src/advancedgl/geometryshader/: normal_visualization.cpp
src/advancedgl/instance/: 10.3.asteroids.vs  asteroids_instanced.cpp
src/advancedgl/stenciltest/: stenciltest.cpp
src/journey/camera/: camera.h  coordinates.cpp
src/journey/coordinates/: coordinates.cpp  fragmentShader.txt
src/journey/hello_window/: hello_window.cpp
src/journey/shader/: shader.cpp
src/journey/texture/: fragmentShader.txt  texture.cpp
src/journey/transform/: fragmentShader.txt  transform.cpp  vertexShader.txt
src/journey/triangle/: triangle.cpp
src/lights/basicLight/: basicLight.cpp  color.cpp  lightCube.fs
src/lights/colors/: lightCube.fs
src/lights/lightCaster/: lightCaster.cpp  lightCube.fs
src/lights/lightMaps/: lightCube.fs  lightCube.vs  lightMaps.cpp
src/lights/materials/: lightCube.fs  lightCube.vs  materials.cpp
src/lights/multipleLights/: multipleLights.cpp
(+2 files in other folders)
